Initial switch to styled-components; introduce SatellitesHeader component

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -145,8 +145,8 @@ button.ahref {
 .header {
   display: inline-block;
   font-size: larger;
-  margin-block-start: 10px;
-  margin-block-end: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   font-weight: bold;
