--- a/src/css-react-virtualized/styles.css
+++ b/src/css-react-virtualized/styles.css
@@ -31,11 +31,11 @@
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 .ReactVirtualized__Table__row {
   display: -webkit-box;
@@ -43,11 +43,11 @@
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .ReactVirtualized__Table__headerTruncatedText {
@@ -60,7 +60,7 @@
 .ReactVirtualized__Table__headerColumn,
 .ReactVirtualized__Table__rowColumn {
   margin-right: 10px;
-  min-width: 0px;
+  min-width: 0;
 }
 .ReactVirtualized__Table__rowColumn {
   text-overflow: ellipsis;
@@ -80,13 +80,13 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 .ReactVirtualized__Table__sortableHeaderIcon {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 24px;
-          flex: 0 0 24px;
+  -ms-flex: 0 0 24px;
+  flex: 0 0 24px;
   height: 1em;
   width: 1em;
   fill: currentColor;
