--- a/src/css-react-virtualized/styles.css
+++ b/src/css-react-virtualized/styles.css
@@ -59,7 +59,7 @@
 
 .ReactVirtualized__Table__headerColumn,
 .ReactVirtualized__Table__rowColumn {
-  margin-right: 10px;
+  margin-right: 0.6rem;
   min-width: 0;
 }
 .ReactVirtualized__Table__rowColumn {
@@ -69,7 +69,7 @@
 
 .ReactVirtualized__Table__headerColumn:first-of-type,
 .ReactVirtualized__Table__rowColumn:first-of-type {
-  margin-left: 10px;
+  margin-left: 0.6rem;
 }
 .ReactVirtualized__Table__sortableHeaderColumn {
   cursor: pointer;
@@ -85,8 +85,8 @@
 }
 .ReactVirtualized__Table__sortableHeaderIcon {
   -webkit-box-flex: 0;
-  -ms-flex: 0 0 24px;
-  flex: 0 0 24px;
+  -ms-flex: 0 0 1.5rem;
+  flex: 0 0 1.5rem;
   height: 1em;
   width: 1em;
   fill: currentColor;
